# communication_pkg

./: CMakeLists.txt  package.xml
include/communication_pkg/: communication.hpp
src/: ERP42.cpp  communication.cpp  communication_main.cpp  testFunctions.cpp
